--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,18 @@
 .form-group.async-validating .spinner-border {
   display: block;
 }
+
+.error-message {
+  width: 100%;
+  margin-top: .25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
+
+.warning-message {
+  width: 100%;
+  margin-top: .25rem;
+  font-size: 80%;
+  color: orange;
+}
+
