--- a/src/components/CodeListening/CodeListening.css
+++ b/src/components/CodeListening/CodeListening.css
@@ -34,3 +34,12 @@ pre[class*="language-"] {
   font-size: 14px !important;
   border-radius: 0 !important;
 }
+
+.code-listening__full {
+  width: 100%;
+  height: 100%;
+}
+
+.code-listening__tabs {
+  
+}
