--- a/src/components/CodeListening/CodeListening.css
+++ b/src/components/CodeListening/CodeListening.css
@@ -1,7 +1,11 @@
 .code-listening {
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
   display: flex;
   flex-grow: 1;
+  width: 100%;
+  height: 100%;
 }
 
 .code-listening__loader {
@@ -27,7 +31,7 @@
   z-index: 9999;
 }
 
-.code-listening  code[class*="language-"],
+.code-listening code[class*="language-"],
 pre[class*="language-"] {
   width: 100%;
   margin: 0 !important;
@@ -36,10 +40,38 @@ pre[class*="language-"] {
 }
 
 .code-listening__full {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.code-listening__full-inner {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
 .code-listening__tabs {
-  
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.code-listening__tabs .tab-content {
+  flex-grow: 1;
+  overflow: auto;
+  position: relative;
+}
+
+.code-listening__tabs .tab-pane {
+  background: rebeccapurple;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
